# turret_klf

./: .gitignore  CMakeLists.txt  package.py  readme.md
AutoLookfileAssign/: CMakeLists.txt  RegisterAutoLookfileAssignNode.py
AutoLookfileAssign/src/: autoLookfileAssignOp.cpp
LookfilePropertyAssign/: CMakeLists.txt  RegisterLookfilePropertyAssignNode.py  RegisterLookfilePropertyAssignUSDNode.py
LookfilePropertyAssign/src/: lookfilePropertyAssignOp.cpp  lookfilePropertyAssignUsdEngine.cpp
